@@ -1,6 +1,6 @@
 \# Copyright (C) 2002 Bruce Allen <smartmontools-support@lists.sourceforge.net>
 \#
-\# $Id: smartctl.8,v 1.21 2002/10/28 23:46:59 ballen4705 Exp $
+\# $Id: smartctl.8,v 1.22 2002/10/29 14:19:10 ballen4705 Exp $
 \# 
 \# This program is free software; you can redistribute it and/or modify it
 \# under the terms of the GNU General Public License as published by the Free
@@ -15,7 +15,7 @@
 \# at the Concurrent Systems Laboratory (now part of the Storage Systems
 \# Research Center), Jack Baskin School of Engineering, University of
 \# California, Santa Cruz. http://ssrc.soe.ucsc.edu/
-.TH SMARTCTL 8  "$Date: 2002/10/28 23:46:59 $" "smartmontools-5.0"
+.TH SMARTCTL 8  "$Date: 2002/10/29 14:19:10 $" "smartmontools-5.0"
 .SH NAME
 smartctl \- S.M.A.R.T. control and monitor utility 
 .SH SYNOPSIS
@@ -57,10 +57,10 @@ The second argument is the device to be controlled or
 interrogated. ATA devices use the form "/dev/hd*" and SCSI devices use
 the form "/dev/sd*".
 
-SCSI devices only accept the options a,i,c,e,d, and p. For SCSI Tape
-Drives and Changers with TapeAlerts support use the devices "/dev/st*"
-and "/dev/sg*". TapeAlerts devices accept the options a,i,c,e,d, and
-p.
+SCSI devices only accept the options a,i,c,e,d,O,s,S,x,X,A and V. For
+SCSI Tape Drives and Changers with TapeAlerts support use the
+devices "/dev/st*" and "/dev/sg*". TapeAlerts devices accept the options
+a,i,c,e,d, and V.
 
 The options are grouped below into several categories.
 .B smartctl
@@ -471,4 +471,4 @@ Please let us know if there is an on\-line source for this document.
 
 .SH
 CVS ID OF THIS PAGE:
-$Id: smartctl.8,v 1.21 2002/10/28 23:46:59 ballen4705 Exp $
+$Id: smartctl.8,v 1.22 2002/10/29 14:19:10 ballen4705 Exp $
